# Covenant

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  app-architecture.md  cli.md  examples.md  getting-started.md  language-reference.md  stdlib.md
examples/: ai_toolkit.cov  async_parallel.cov  concise.cov  dead_code.cov  factorial.cov  fibonacci.cov  flagship.cov  flow_violation.cov  ollama_chat.cov  patient_record.cov  permission_check.cov  rag.cov  sensor_processing.cov  shared_ledger.cov  stdlib_demo.cov  test_features.cov  transfer.cov
examples/fullstack/: api.cov
examples/fullstack/static/: index.html
src/: lib.rs  main.rs  serve.rs
src/ast/: mod.rs
src/covenant/: __init__.py  cli.py
src/covenant/ast/: __init__.py  nodes.py
src/covenant/compiler/: __init__.py
src/covenant/lexer/: __init__.py  lexer.py  tokens.py
src/covenant/parser/: __init__.py  parser.py
src/covenant/runtime/: __init__.py
src/covenant/types/: __init__.py
src/covenant/verify/: __init__.py  checker.py  fingerprint.py  hasher.py
src/lexer/: mod.rs  tokens.rs
src/parser/: mod.rs
src/runtime/: mod.rs
src/runtime/stdlib/: ai.rs  anthropic.rs  crypto.rs  data.rs  db.rs  embeddings.rs  env.rs  file_io.rs  grok.rs  guardrails.rs  http_client.rs  json_mod.rs  math.rs  mcp_mod.rs  mcpx.rs  mod.rs  ollama.rs  openai_mod.rs  prompts.rs  text.rs  time_mod.rs  web.rs
src/verify/: capability.rs  checker.rs  contract_verify.rs  fingerprint.rs  hasher.rs  mapper.rs  mod.rs  type_check.rs
src/vm/: bytecode.rs  compiler.rs  machine.rs  mod.rs  opcodes.rs
tests/rust/: test_lexer.rs  test_parser.rs  test_runtime.rs  test_verify.rs  test_vm.rs
tests/test_lexer/: test_tokenizer.py
tests/test_parser/: test_parser.py
tests/test_verify/: test_checker.py  test_fingerprint.py  test_hasher.py
