[package]
name = "covenant-lang"
version = "0.1.0"
edition = "2021"
description = "The Covenant programming language — an AI-first language with intent verification"

[[bin]]
name = "covenant"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
opt-level = 3
lto = true
