[package]
name = "covenant-lang"
version = "0.1.0"
edition = "2021"
description = "The Covenant programming language — an AI-first language with intent verification"

[[bin]]
name = "covenant"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[[test]]
name = "test_lexer"
path = "tests/rust/test_lexer.rs"

[[test]]
name = "test_parser"
path = "tests/rust/test_parser.rs"

[[test]]
name = "test_runtime"
path = "tests/rust/test_runtime.rs"

[[test]]
name = "test_vm"
path = "tests/rust/test_vm.rs"

[[test]]
name = "test_verify"
path = "tests/rust/test_verify.rs"

[profile.release]
opt-level = 3
lto = true
